objects/FISCC_Charter_Config__mdt.object
<CustomObject>
    <description>Metadata for all the configs related to FISCC_Charter_Config</description>
    <fields>
        <fullName>Application_Scope__c</fullName>
        <description>Application Scope</description>
        <label>Application Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>Brand</description>
        <label>Brand</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConsumerKey__c</fullName>
        <description>Consumer Key</description>
        <label>Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConsumerSecret__c</fullName>
        <description>Consumer Secret</description>
        <label>Consumer Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerId__c</fullName>
        <description>Customer Id</description>
        <label>CustomerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EncryptionKey__c</fullName>
        <description>Encryption Key</description>
        <label>Encryption Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndpointURLDSS__c</fullName>
        <description>This contains base url for API explicitly to handle DSS</description>
        <label>EndpointURLDSS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndpointUrlCBAuth__c</fullName>
        <description>This field contains base url for API explicitly to handle CB services</description>
        <label>EndpointUrlCBAuth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndpointUrlCB__c</fullName>
        <description>This field contains base url for API explicitly to handle CB auth</description>
        <label>EndpointUrlCB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndpointUrlCEB__c</fullName>
        <description>This contains base url for API explicitly to handle CEB</description>
        <label>EndpointUrlCEB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndpointUrlFCM__c</fullName>
        <description>FCM URL</description>
        <label>Endpoint FCM URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndpointUrl__c</fullName>
        <description>Endpoint Url</description>
        <label>EndpointUrl</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCMConsumerKey__c</fullName>
        <description>FCM Consumer Key</description>
        <label>FCM Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCMConsumerSecret__c</fullName>
        <description>FCM Consumer Secret</description>
        <label>FCM Consumer Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCMEntityId__c</fullName>
        <description>FCM Entity Id</description>
        <label>FCM Entity Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCMEntityToken__c</fullName>
        <description>FCM Entity Token (Username and Password)</description>
        <label>FCM Entity Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FISIcEncSk1__c</fullName>
        <description>FISIcEncSk1</description>
        <label>FISIcEncSk1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FISIcEncSk2__c</fullName>
        <description>FISIcEncSk2</description>
        <label>FISIcEncSk2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FISIcEncX5ts256__c</fullName>
        <description>FISIcEncX5ts256</description>
        <label>FISIcEncX5ts256</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_type__c</fullName>
        <description>Grant Type</description>
        <label>Grant type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBSAuthorization__c</fullName>
        <description>IBS-Authorization is not required for the sandbox environment. When provided, base64 encode the string in the format &quot;userid:password&quot;.</description>
        <inlineHelpText>IBSAuthorization.</inlineHelpText>
        <label>IBSAuthorization</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationId__c</fullName>
        <description>Location Id</description>
        <label>LocationId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationId__c</fullName>
        <description>FIS processing organization ID</description>
        <label>OrganizationId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecurityTokenTypeDSS__c</fullName>
        <description>Security Token Type for DSS</description>
        <label>SecurityTokenTypeDSS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecurityTokenType__c</fullName>
        <description>SecurityToken Type</description>
        <label>SecurityTokenType</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceURL__c</fullName>
        <description>It contains named credential having base url only</description>
        <label>ServiceURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceIdDSS__c</fullName>
        <description>Source Id for DSS</description>
        <label>SourceIdDSS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceId__c</fullName>
        <description>Source Id (also known as the Connectware vendor ID)</description>
        <label>SourceId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validity_Period__c</fullName>
        <description>It contains validity of access token</description>
        <label>Validity Period</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>FISCC_Charter_Config</label>
    <listViews>
        <fullName>DetailVIew</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>CustomerId__c</columns>
        <columns>IBSAuthorization__c</columns>
        <filterScope>Everything</filterScope>
        <label>DetailVIew</label>
    </listViews>
    <pluralLabel>FISCC_Charter_Config</pluralLabel>
</CustomObject>